--- a/scss/main.scss
+++ b/scss/main.scss
@@ -105,6 +105,39 @@ main {
     grid-area: job3;
   }
 }
+.projects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.7rem;
+  img {
+    width: 100%;
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut;
+    }
+  }
+}
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  margin-bottom: 0.3rem;
+  border: 0;
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, $amount: 50);
+  color: #fff;
+}
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, $amount: 50);
+  color: #333;
+}
 #main-footer {
   height: 60px;
   background: darken($primary-color, $amount: 5);
@@ -112,4 +145,5 @@ main {
   text-align: center;
   color: set-text-color($primary-color);
 }
+
 @import "mobile";
