--- a/scss/main.scss
+++ b/scss/main.scss
@@ -138,6 +138,29 @@ main {
   background: lighten($primary-color, $amount: 50);
   color: #333;
 }
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+  div {
+    padding: 1.5rem 2.5rem;
+    font-size: 2rem;
+    border: 3px solid #fff;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($primary-color);
+      }
+    }
+  }
+}
 #main-footer {
   height: 60px;
   background: darken($primary-color, $amount: 5);
